--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coursework for CST3145</title>
+    <title>After-School Classes and Activities</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://kit.fontawesome.com/yourkit.js"></script>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-    <h1>hello world</h1>
+    <div id="app">
+
+    </div>
+    <script src="lesson.js"></script>
+    <script>
+        // mount the vue app
+        const app = new Vue({
+        el: "#app",
+        data: {
+          lessons: LESSONS,
+          cart: [],
+          showCart: false,
+          sortOption: "",
+          searchQuery: "",
+          name: "",
+          phone: "",
+        },});
+    </script>
 </body>
+
 </html>
