--- a/index.html
+++ b/index.html
@@ -5,30 +5,98 @@
     <title>After-School Classes and Activities</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://kit.fontawesome.com/yourkit.js"></script>
-    
+
 </head>
 
 <body>
     <div id="app">
+        <h2 class="mt-4 mb-4">Rufa'i After-School Classes Shopping Cart</h2>
 
+    <!-- Search Functionality -->
+    <!-- Search and Sort -->
+    <div class="row mb-4">
+      <div class="col-md-6">
+        <input type="text" v-model="searchQuery" class="form-control" placeholder="Search for lessons">
+      </div>
+      <!-- Sort Functionality -->
+      <div class="col-md-3">
+        <select v-model="sortOption" class="form-control">
+          <option value="">Sort by</option>
+          <option value="subject">Subject</option>
+          <option value="location">Location</option>
+          <option value="price">Price</option>
+          <option value="spaces">Spaces</option>
+        </select>
+      </div>
+      <div class="col-md-3">
+        <button @click="sortLessons()" class="btn btn-success btn-block">Sort</button>
+      </div>
+    </div>
+    <!-- Display List of Lessons -->
+    <div class="row">
+      <div class="col-md-4" v-for="lesson in filteredLessons" :key="lesson.id">
+        <div class="card mb-3">
+          <div class="card-body">
+            <h3 class="card-title">{{ lesson.subject }}</h3>
+            <p class="card-text">Location: {{ lesson.location }}</p>
+            <p class="card-text">Price: ${{ lesson.price }}</p>
+            <p class="card-text">Spaces: {{ lesson.spaces }}</p>
+            <i :class="lesson.icon"></i>
+            <button :disabled="lesson.spaces === 0" @click="addToCart(lesson)" class="btn btn-success btn-block">Add to
+              Cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Shopping Cart Functionality -->
+    <div class="d-flex justify-content-end">
+      <button :disabled="cart.length === 0" @click="showCart = !showCart" class="btn btn-success">
+        <span class="badge badge-light">Cart {{ cartItemCount }}</span> </button>
+    </div>
+    <div v-if="showCart" class="container mt-4">
+      <h2>Shopping Cart</h2>
+
+      <ul class="list-group">
+        <li class="list-group-item" v-for="item in cart" :key="item.id">
+          {{ item.subject }} - ${{ item.price }}
+          <button @click="removeFromCart(item)" class="btn btn-danger btn-sm float-right">Remove</button>
+          <br>
+        </li>
+      </ul>
+
+      <!-- Checkout Functionality -->
+      <div class="mt-4">
+        <h3>Checkout</h3>
+        <div class="form-group">
+          <input type="text" v-model="name" class="form-control" placeholder="Name" pattern="^[a-zA-Z\s]+$">
+        </div>
+        <div class="form-group">
+          <input type="text" v-model="phone" class="form-control" placeholder="Phone" pattern="^\d+$">
+        </div>
+        <button :disabled="!validForm" @click="checkout" class="btn btn-success"><span class="badge badge-light">{{
+            cartItemCount }}</span>Checkout</button></button>
+      </div>
+    </div>
     </div>
     <script src="lesson.js"></script>
     <script>
         // mount the vue app
         const app = new Vue({
-        el: "#app",
-        data: {
-          lessons: LESSONS,
-          cart: [],
-          showCart: false,
-          sortOption: "",
-          searchQuery: "",
-          name: "",
-          phone: "",
-        },});
+            el: "#app",
+            data: {
+                lessons: LESSONS,
+                cart: [],
+                showCart: false,
+                sortOption: "",
+                searchQuery: "",
+                name: "",
+                phone: "",
+            },
+        });
     </script>
 </body>
 
